--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!doctype html>
 <meta charset="UTF-8">
-<title>me.suwdo.com</title>
-
-<style>
-body {
-  font-family: monospace;
-  margin: 1em auto;
-  max-width: 800px;
-}
-h2 {
-  text-decoration: underline;
-}
-section {
-  margin-left: 2em;
-}
-</style>
-
+<head>
+  <link rel="stylesheet" href="assets/css/base.css">
+  <title>me.suwdo.com</title>
+</head>
+<body>
 <h1>me.suwdo.com</h1>
 <hr>
+</body>
