--- a/archive.html
+++ b/archive.html
@@ -2,10 +2,10 @@
 <meta charset="UTF-8">
 <head>
     <link rel="stylesheet" href="assets/css/base.css">
-    <title>me.suwdo.com</title>
+    <title>me.suwdo.com > archive</title>
 </head>
 <body>
-    <h1>me.suwdo.com</h1>
+    <h1>me.suwdo.com > archive</h1>
     <h2>
         <a href="/">home</a>
             | <a href="climbing.html">climbing</a>
