Add stuff to climbing section

--- a/archive.html
+++ b/archive.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>me.suwdo.com > archive</h1>
-    <h2>
+    <div id="menu">
         <a href="/">home</a>
             | <a href="climbing.html">climbing</a>
             | <a href="archive.html">archive</a>
-    </h2>
+    </div>
     <hr>
 </body>
