Clarify notes on climbing page

--- a/climbing.html
+++ b/climbing.html
@@ -21,7 +21,7 @@
     definitive or "safe" beta of any sort.</em>
   </p>
   <p>
-    Some additional notes about this page:
+    Some additional things about this page:
     <ul>
       <li>
         Ratings are personal ratings. Check a guide book or Mountain Project for
