Update gear for frogland

--- a/climbing.html
+++ b/climbing.html
@@ -115,10 +115,19 @@
     <li>Rating: 5.8 PG-13</li>
     <li>Lead: pitch 3-6</li>
   </ul>
+  <h3>Gear</h3>
+  <ul>
+    <li>Totem: double from blue to purple, single black and green</li>
+    <li>C4: double from 1 to 3, single 0.4, .5, 0.75, 4</li>
+    <li>Z4: single 0, .1, .2</li>
+    <li>Nuts: none</li>
+    <li>Alpine draws: 10</li>
+    <li>Rope: 1x 60m</li>
+    <li>Other stuff: 2x lockers, 2x double length slings</li>
+  </ul>
   <h3>Topo</h3>
   <p>Being drawn...</p>
   <h3>Photos</h3>
-
   <p class="img-descriptive">
     <img src="assets/images/20201120_frogland1.jpeg"
     title="Watching the sun rise behind us on the approach">
