--- a/climbing.html
+++ b/climbing.html
@@ -95,6 +95,11 @@
     title="Pitch 1">
     Unknown climber (me) on pitch 1.
   </p>
+  <p class="img-full-width img-descriptive">
+      <img src="assets/images/20201120_catinthehat5.jpeg"
+      title="Canyon view">
+    View of the canyon
+  </p>
   <p class="img-descriptive">
     <img src="assets/images/20201120_catinthehat3.jpeg"
     title="View from near pitch 4">
