--- a/climbing.html
+++ b/climbing.html
@@ -54,9 +54,9 @@
   </p>
   <h3>The basics</h3>
   <ul>
-    <li>Personal First Ascent: October 30th, 2020</li>
-    <li>Party: 3 (single rope with ascender)</li>
-    <li>Time: 8 hours car to car</li>
+    <li>Last Ascent: November 14th, 2020</li>
+    <li>Party: 2</li>
+    <li>Time: ~4 hours base to base</li>
     <li>Rating: 5.6</li>
     <li>Lead: all pitches</li>
   </ul>
@@ -114,7 +114,7 @@
     want to. Make some grunting noises, release your anger.
   </p>
   <ul>
-    <li>Personal First Ascent: October 3rd, 2020</li>
+    <li>Last Ascent: October 3rd, 2020</li>
     <li>Party: 2</li>
     <li>10 hours car to car</li>
     <li>Rating: 5.8 PG-13</li>
@@ -152,5 +152,61 @@
     <img src="assets/images/20201120_frogland4.jpeg"
     title="Found a friend on the walk-off">
     Found a friend on the walk-off.
+  </p>
+  <!-- Start Crystal Crag -->
+  <h2 id="2020095_crystal">North Arete/Aretes of Crystal Crag direct - 5.6 - September 2020 - Crystal Crag, CA</h2>
+  <h3>The basics</h3>
+  <p>
+    This is probably one of the easiest approach "alpine" climbs you can do, Roughly
+    45 minutes from the parking lot to the base. I didn't actually finish all of the
+    "summits" of Crystal Crag as I saw a dark cloud in the distance. That "cloud" turned
+    out to be one of the Sierra fires in the summer of 2020.
+  </p>
+  <ul>
+    <li>Last Ascent: September 5th, 2020</li>
+    <li>Party: 1</li>
+    <li>Time: 5 hours car to car</li>
+    <li>Rating: 5.2 (aka Sierra alpine 5.6)</li>
+  </ul>
+  <h3>Photos</h3>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal1.jpg"
+    title="Does this count as an alpine start if you can see?">
+    Does this count as an alpine start if you can see?
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal2.jpg"
+    title="View of Lake George">
+    View of Lake George.
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal7.jpg"
+    title="Time to do some boulder hopping to get to the base of the climb">
+    Time to do some boulder hopping to get to the base of the climb
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal3.jpg"
+    title="Start of the famous crystal pitch">
+    Start of the famous crystal pitch
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal4.jpg"
+    title="First summit, including the rock everyone stands on for the gram">
+    First summit, including the rock everyone stands on for the gram.
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal5.jpg"
+    title="On my way to clear all the summits">
+    On my way to clear all the summits.
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal6.jpg"
+    title="Oh look ... another one. It just never ends. Just before I bailed off">
+    Oh look ... another one. It just never ends. Just before I bailed off
+  </p>
+  <p class="img-descriptive">
+    <img src="assets/images/20201120_crystal8.jpg"
+    title="The only proper way to finish a day">
+    The only proper way to finish a day
   </p>
 </body>
