Add correct anchor for crystal

--- a/climbing.html
+++ b/climbing.html
@@ -43,6 +43,9 @@
     <li>
       <a href="#202010_frogland">Frogland - 5.8 - October 2020 - Red Rock, NV</a>
     </li>
+    <li>
+      <a href="#2020095_crystal">North Arete/Aretes of Crystal Crag direct - 5.6 - September 2020 - Crystal Crag, CA</a>
+    </li>
   </ul>
   <hr>
 
