--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <meta charset="UTF-8">
 <head>
-    <link rel="stylesheet" href="assets/css/base.css">
-    <title>me.suwdo.com</title>
+  <link rel="stylesheet" href="assets/css/base_v1.0.0.css">
+  <title>me.suwdo.com</title>
 </head>
 <body>
-    <h1>me.suwdo.com</h1>
-    <div id="menu">
-        <a href="/">home</a>
-            | <a href="climbing.html">climbing</a>
-            | <a href="archive.html">archive</a>
-    </div>
-    <hr>
+  <h1>me.suwdo.com</h1>
+  <div id="menu">
+    <a href="/">home</a>
+    | <a href="climbing.html">climbing</a>
+    | <a href="archive.html">archive</a>
+  </div>
+  <hr>
 </body>
