--- a/climbing.html
+++ b/climbing.html
@@ -38,7 +38,7 @@
   <h2>The climbs</h2>
   <ul>
     <li>
-      <a href="#202011_dolphin">Dolphin - 5.7 - November 2020 - JTNP, NV</a>
+      <a href="#202011_dolphin">Dolphin - 5.7 - November 2020 - JTNP, CA</a>
     </li>
     <li>
       <a href="#202011_catinthehat">Cat in the Hat - 5.6 - November 2020 - Red Rock, NV</a>
@@ -54,7 +54,7 @@
 
 
   <!-- Start Dolphin -->
-  <h2 id="202011_dolphin">Dolphin - 5.7 - October 2020 - JTNP, NV</h2>
+  <h2 id="202011_dolphin">Dolphin - 5.7 - October 2020 - JTNP, CA</h2>
   <p>
     Commentary: Probably the best moderate off-width (is that phrase even legal?) in
     Joshua Tree. Easy climbing from the start to a short but will seem like forever
@@ -234,8 +234,8 @@
   </p>
   <p class="img-descriptive">
     <img src="assets/images/20201120_crystal3.jpg"
-    title="Start of the famous crystal pitch">
-    Start of the famous crystal pitch
+    title="The famous crystal">
+    The famous crystal
   </p>
   <p class="img-descriptive">
     <img src="assets/images/20201120_crystal4.jpg"
