Add topo for CitH

--- a/climbing.html
+++ b/climbing.html
@@ -122,7 +122,10 @@
     you won't use half of this gear per pitch, but never hurts to have extras?
   </p>
   <h3>Topo</h3>
-  <p>Being drawn...</p>
+  <p class="img-descriptive">
+    <img src="assets/topos/topo_catinthehat.jpg"
+    title="Topo for Cat in the Hat">
+  </p>
   <h3>Photos</h3>
   <p class="img-descriptive">
     <img src="assets/images/20201120_catinthehat1.jpeg"
