--- a/climbing.html
+++ b/climbing.html
@@ -38,226 +38,17 @@
   <h2>The climbs</h2>
   <ul>
     <li>
-      <a href="#202011_dolphin">Dolphin - 5.7 - November 2020 - JTNP, CA</a>
+      <a href="/climbing/202011_dolphin.html">Dolphin - 5.7 - November 2020 - JTNP, CA</a>
     </li>
     <li>
-      <a href="#202011_catinthehat">Cat in the Hat - 5.6 - November 2020 - Red Rock, NV</a>
+      <a href="/climbing/202011_catinthehat.html">Cat in the Hat - 5.6 - November 2020 - Red Rock, NV</a>
     </li>
     <li>
-      <a href="#202010_frogland">Frogland - 5.8 - October 2020 - Red Rock, NV</a>
+      <a href="/climbing/202010_frogland.html">Frogland - 5.8 - October 2020 - Red Rock, NV</a>
     </li>
     <li>
-      <a href="#2020095_crystal">North Arete/Aretes of Crystal Crag direct - 5.6 - September 2020 - Crystal Crag, CA</a>
+      <a href="/climbing/2020095_crystal.html">North Arete/Aretes of Crystal Crag direct - 5.6 - September 2020 - Crystal Crag, CA</a>
     </li>
   </ul>
   <hr>
-
-
-  <!-- Start Dolphin -->
-  <h2 id="202011_dolphin">Dolphin - 5.7 - October 2020 - JTNP, CA</h2>
-  <p>
-    Commentary: Probably the best moderate off-width (is that phrase even legal?) in
-    Joshua Tree. Easy climbing from the start to a short but will seem like forever
-    off-width section you're either too big or too small for. I'll definitely be back
-    for that clean send.
-  </p>
-  <h3>The basics</h3>
-  <ul>
-    <li>Last Ascent: November 23th, 2020</li>
-    <li>Party: 2</li>
-    <li>Rating: 5.7</li>
-    <li>Lead: 1 take</li>
-  </ul>
-  <h3>Gear</h3>
-  <ul>
-    <li>C4: doubles from 2-4, single 5, 6</li>
-    <li>Alpine draws: 10</li>
-    <li>Rope: 1x 70m</li>
-    <li>Other stuff: 2x lockers for anchor</li>
-  </ul>
-  <h3>Notes</h3>
-  <ul>
-    <li>Anchor is bolted to climbers left.</li>
-    <li>Rap off of anchors to the right of Bird of Fire, which are ... questionable</li>
-    <li>Dump doubles of 2-4 early and start bumping 5, then bump 6 to top</li>
-  </ul>
-
-  <h3>Photos</h3>
-  <p class="img-descriptive">
-    <img src="assets/images/20201123_dolphin1.jpeg"
-    title="View of Dolphin from the base of the climb">
-    View of Dolphin from the base of the climb.
-  </p>
-  <p class="img-full-width img-descriptive">
-    <img src="assets/images/20201123_dolphin2.jpeg"
-    title="View from Isle in the Sky and the rappel descent.">
-    View from Isle in the Sky and the rappel descent.
-  </p>
-
-  <!-- Start CitH -->
-  <h2 id="202011_catinthehat">Cat in the Hat - 5.6 - October 2020 - Red Rock, NV</h2>
-  <p>
-    Commentary: Cat in the hat is a chill, but interesting enough multipitch. Great route to
-    familiarize yourself with Red Rock trad multis.
-  </p>
-  <h3>The basics</h3>
-  <ul>
-    <li>Last Ascent: November 14th, 2020</li>
-    <li>Party: 2</li>
-    <li>Time: ~4 hours base to base</li>
-    <li>Rating: 5.6</li>
-    <li>Lead: all pitches</li>
-  </ul>
-  <h3>Gear</h3>
-  <ul>
-    <li>Totem: double from blue to purple, single black and green</li>
-    <li>C4: double from 1 to 3, single 0.75, 4</li>
-    <li>Nuts: none</li>
-    <li>Alpine draws: 10</li>
-    <li>Rope: 1x 70m</li>
-    <li>Other stuff: 2x lockers, 2x double length slings</li>
-  </ul>
-  <p>
-    Commentary: If you're a somewhat competent climber (e.g. solid Joshua Tree 5.7 climber),
-    you won't use half of this gear per pitch, but never hurts to have extras?
-  </p>
-  <h3>Topo</h3>
-  <p class="img-descriptive">
-    <img src="assets/topos/topo_catinthehat.jpg"
-    title="Topo for Cat in the Hat">
-  </p>
-  <h3>Photos</h3>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_catinthehat1.jpeg"
-    title="Photo of mescalito on approach">
-    Mescalito after walking roughly 10 minutes from the Pine Creek Canyon parking
-      lot. The approach trail map can be found on <a
-      href="https://www.mountainproject.com/area/105732159/mescalito">
-      Mountain
-      Project</a>.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_catinthehat2.jpeg"
-    title="View of Mescalito near the base">
-      Mescalito in all of it's glory.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_catinthehat4.jpeg"
-    title="Pitch 1">
-    Unknown climber (me) on pitch 1.
-  </p>
-  <p class="img-full-width img-descriptive">
-      <img src="assets/images/20201120_catinthehat5.jpeg"
-      title="Canyon view">
-    View of the canyon
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_catinthehat3.jpeg"
-    title="View from near pitch 4">
-    View from near pitch 4.
-  </p>
-
-  <!-- Start Frogland -->
-  <h2 id='202010_frogland'>Frogland - October 2020 - Red Rock, NV</h2>
-  <h3>The basics</h3>
-  <p>
-    You do Frogland for the chockstone squeeze pitch. Just do it. You know you
-    want to. Make some grunting noises, release your anger.
-  </p>
-  <ul>
-    <li>Last Ascent: October 3rd, 2020</li>
-    <li>Party: 2</li>
-    <li>10 hours car to car</li>
-    <li>Rating: 5.8 PG-13</li>
-    <li>Lead: pitch 3-6</li>
-  </ul>
-  <h3>Gear</h3>
-  <ul>
-    <li>Totem: double from blue to purple, single black and green</li>
-    <li>C4: double from 1 to 3, single 0.4, .5, 0.75, 4</li>
-    <li>Z4: single 0, .1, .2</li>
-    <li>Nuts: none</li>
-    <li>Alpine draws: 10</li>
-    <li>Rope: 1x 60m</li>
-    <li>Other stuff: 2x lockers, 2x double length slings</li>
-  </ul>
-  <h3>Topo</h3>
-  <p>Being drawn...</p>
-  <h3>Photos</h3>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_frogland1.jpeg"
-    title="Watching the sun rise behind us on the approach">
-    Watching the sun rise behind us on the approach
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_frogland2.jpeg"
-    title="My leader starting pitch one">
-    My leader starting pitch one. Pro? We don't need pro where we're going.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_frogland3.jpeg"
-    title="Follower about to enter the chockstone birthing canal">
-    Follower about to enter the chockstone birthing canal.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_frogland4.jpeg"
-    title="Found a friend on the walk-off">
-    Found a friend on the walk-off.
-  </p>
-  <!-- Start Crystal Crag -->
-  <h2 id="2020095_crystal">North Arete/Aretes of Crystal Crag direct - 5.6 - September 2020 - Crystal Crag, CA</h2>
-  <h3>The basics</h3>
-  <p>
-    This is probably one of the easiest approach "alpine" climbs you can do, Roughly
-    45 minutes from the parking lot to the base. I didn't actually finish all of the
-    "summits" of Crystal Crag as I saw a dark cloud in the distance. That "cloud" turned
-    out to be one of the Sierra fires in the summer of 2020.
-  </p>
-  <ul>
-    <li>Last Ascent: September 5th, 2020</li>
-    <li>Party: 1</li>
-    <li>Time: 5 hours car to car</li>
-    <li>Rating: 5.2 (aka Sierra alpine 5.6)</li>
-  </ul>
-  <h3>Photos</h3>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal1.jpg"
-    title="Does this count as an alpine start if you can see?">
-    Does this count as an alpine start if you can see?
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal2.jpg"
-    title="View of Lake George">
-    View of Lake George.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal7.jpg"
-    title="Time to do some boulder hopping to get to the base of the climb">
-    Time to do some boulder hopping to get to the base of the climb
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal3.jpg"
-    title="The famous crystal">
-    The famous crystal
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal4.jpg"
-    title="First summit, including the rock everyone stands on for the gram">
-    First summit, including the rock everyone stands on for the gram.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal5.jpg"
-    title="On my way to clear all the summits">
-    On my way to clear all the summits.
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal6.jpg"
-    title="Oh look ... another one. It just never ends. Just before I bailed off">
-    Oh look ... another one. It just never ends. Just before I bailed off
-  </p>
-  <p class="img-descriptive">
-    <img src="assets/images/20201120_crystal8.jpg"
-    title="The only proper way to finish a day">
-    The only proper way to finish a day
-  </p>
 </body>
