--- a/header.html
+++ b/header.html
@@ -8,8 +8,7 @@
   <h1>me.suwdo.com</h1>
   <div id="menu">
     <a href="/">home</a>
-    | <a href="climbing.html">climbing</a>
-    | <a href="archive.html">archive</a>
+    | <a href="/climbing.html">climbing</a>
+    | <a href="/archive.html">archive</a>
   </div>
   <hr>
-</body>
