Fix photos for birdland

--- a/climbing/202101_birdland.html
+++ b/climbing/202101_birdland.html
@@ -1,4 +1,3 @@
-<!-- Start Frogland -->
  <h2 id='202101_birdland'>Birdland - January 2021 - Red Rock, NV</h2>
  <h3>The basics</h3>
  <p>
@@ -24,22 +23,22 @@
  <p>Who am I kidding? This is never gonna happen.</p>
  <h3>Photos</h3>
  <p class="img-descriptive">
-   <img src="assets/images/20201120_frogland1.jpeg"
-   title="Watching the sun rise behind us on the approach">
-   Watching the sun rise behind us on the approach
+   <img src="assets/images/202101_birdland1.jpeg"
+   title="Approach just as the sun is rising">
+   Approach just as the sun is rising
  </p>
  <p class="img-descriptive">
-   <img src="assets/images/20201120_frogland2.jpeg"
-   title="My leader starting pitch one">
-   My leader starting pitch one. Pro? We don't need pro where we're going.
+   <img src="assets/images/202101_birdland2.jpeg"
+   title="Found a buddy on the approach!">
+   Found a buddy on the approach!
  </p>
  <p class="img-descriptive">
-   <img src="assets/images/20201120_frogland3.jpeg"
-   title="Follower about to enter the chockstone birthing canal">
-   Follower about to enter the chockstone birthing canal.
+   <img src="assets/images/202101_birdland3.jpeg"
+   title="View across Red Rock from somewhere on the route">
+   View across Red Rock from somewhere on the route
  </p>
  <p class="img-descriptive">
-   <img src="assets/images/20201120_frogland4.jpeg"
-   title="Found a friend on the walk-off">
-   Found a friend on the walk-off.
+   <img src="assets/images/202101_birdland4.jpeg"
+   title="My follower on the last pitch">
+   My follower on the last pitch
  </p>
